--- a/style.css
+++ b/style.css
@@ -30,3 +30,38 @@ section div p {
     font-size: 14px;
     font-style: italic;
 }
+
+
+@media only screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+    }
+
+    header img {
+        height: 40px;
+        margin: 0;
+    }
+
+    header h1 {
+        font-size: 24px;
+    }
+
+    section div {
+        flex-direction: column;
+    }
+
+    section div h2 {
+        margin: 0;
+    }
+    
+    section div p {
+        font-size: 14px;
+        font-style: italic;
+        margin: 0;
+    }
+
+    section p {
+        text-align: center;
+    }
+
+}
