--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,53 @@ body {
 
 .App {
   width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.login {
+  justify-content: center;
+
+  .login__logo {
+    height: 100px;
+    margin-bottom: 32px;
+  }
+
+  h1 {
+    color: white;
+    margin: 0;
+    text-align: center;
+  }
+
+  h4 {
+    color: white;
+    margin: 0;
+    font-weight: 400;
+    margin-bottom: 32px;
+    text-align: center;
+  }
+
+  .google-button {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    background-color: white;
+    border-radius: 5px;
+    margin-bottom: 16px;
+
+    .google-icon {
+      margin-right: 16px;
+    }
+    a {
+      color: $accent-color;
+      text-decoration: none;
+    }
+  }
+  a {
+    color: $secondary-color;
+    text-decoration: none;
+  }
 }
 
 // NAVIGATION =============================
@@ -27,11 +71,13 @@ body {
   width: 100vw;
   box-sizing: border-box;
   color: white;
+  position: fixed;
+  z-index: 25;
 
-  h1 {
-    margin: 0;
-    font-size: 20px;
+  .app__logo {
+    height: 24px;
   }
+
 }
 
 .city-search__container {
@@ -107,6 +153,7 @@ body {
 .event-list {
   list-style-type: none;
   width: 70%;
+  margin-top: 70px;
 }
 
 .event-item__container {
@@ -132,6 +179,8 @@ body {
 
         p {
           font-weight: 600;
+          font-size: 18px;
+          color: $link-color;
         }
      }
 
@@ -140,6 +189,7 @@ body {
        font-size: 14px;
        text-transform: uppercase;
        margin-bottom: 10px;
+       color: $secondary-color;
      }
   }
 
