--- a/src/App.scss
+++ b/src/App.scss
@@ -73,6 +73,7 @@ body {
   color: white;
   position: fixed;
   z-index: 25;
+  box-shadow: 0px 5px 5px $accent-color;
 
   .app__logo {
     height: 24px;
@@ -113,7 +114,7 @@ body {
     z-index: 50;
     width: 100%;
     top: 0px;
-    box-shadow: 0 0 20px .5 black;
+    box-shadow: 0 0 20px $accent-color;
 
     .city-suggestion {
       margin: 0;
@@ -143,6 +144,12 @@ body {
   width: 70px;
   border: none;
   font-family: 'Jost';
+
+  &:hover,
+  &:focus {
+    outline: none;
+    background-color: $secondary-color;
+  }
 }
 
 
@@ -153,7 +160,7 @@ body {
 .event-list {
   list-style-type: none;
   width: 70%;
-  margin-top: 70px;
+  margin-top: 80px;
 }
 
 .event-item__container {
