--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ $link-color: #3ED84D;
 
 body {
   margin: 0;
-  font-family: 'Jost';
+  font-family: 'Jost', sans-serif;
   background-color: $primary-color;
 }
 
@@ -89,7 +89,7 @@ body {
     padding: 8px 16px;
     box-sizing: border-box;
     border-radius: 5px;
-    font-family: 'Jost';
+    font-family: 'Jost', sans-serif;
     width: 100%;
     position: relative;
     z-index: 999;
@@ -143,7 +143,7 @@ body {
   border-radius: 5px;
   width: 70px;
   border: none;
-  font-family: 'Jost';
+  font-family: 'Jost', sans-serif;
 
   &:hover,
   &:focus {
