--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,20 @@
-$primary-color: #182341;
+$primary-color: #333333;
 $accent-color: #020E2E;
-$secondary-color: #D0D7E8;
-$link-color: #3ED84D;
+$secondary-color: #F6F6F6;;
+$link-color: #E8D190;
 
 body {
   margin: 0;
   font-family: 'Jost', sans-serif;
   background-color: $primary-color;
+}
+
+.line {
+  height: 1px;
+  width: auto;
+  background-color: $secondary-color;
+  margin-bottom: 16px;
+  opacity: .5;
 }
 
 .App {
@@ -16,6 +24,38 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.alert-container {
+  position: fixed;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  z-index: 9999;
+  width: 100vw;
+  left: 0;
+  bottom: 0;
+  padding: 8px 16px;
+  font-size: 12px;
+
+  img {
+    margin-right: 8px;
+  }
+
+  p {
+    margin: 0;
+    margin-right: 24px;
+  }
+
+  .alert_close {
+    margin-left: auto;
+    font-family: 'Jost', sans-serif;
+    text-transform: uppercase;
+    border: none;
+    background-color: transparent;
+    color: $secondary-color;
+  }
+}
+
 .login {
   justify-content: center;
 
@@ -65,18 +105,23 @@ body {
 .app__navigation-bar {
   display: flex;
   justify-content: space-between;
+  background-color: $primary-color;
   align-items: center;
   padding: 15px 165px;
-  background-color: $accent-color;
   width: 100vw;
   box-sizing: border-box;
-  color: white;
+  color: #F6F6F6;
   position: fixed;
   z-index: 25;
-  box-shadow: 0px 5px 5px $accent-color;
 
   .app__logo {
     height: 24px;
+  }
+  h1 {
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
   }
 
 }
@@ -85,10 +130,18 @@ body {
   position: relative;
   width: 50%;
 
+  .search_icon {
+    position: absolute;
+    top: 13px;
+    left: 16px;
+    z-index: 9999;
+  }
+
+
   .city-search__input {
-    padding: 8px 16px;
+    padding: 16px 16px 16px 56px;
     box-sizing: border-box;
-    border-radius: 5px;
+    background-color: transparent;
     font-family: 'Jost', sans-serif;
     width: 100%;
     position: relative;
@@ -96,62 +149,81 @@ body {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    color: $secondary-color;
+    &::placeholder {
+      transition: color 0.3s;
+    }
 
     &:hover,
     &:focus {
       outline: none;
-      background-color: $secondary-color;
+      background-color: #181818;
+
+      &::placeholder {
+        color: $secondary-color;
+      }
     }
   }
 
   .city-search__suggestions {
     position: absolute;
-    background-color: white;
+    background-color: #181818;
     list-style-type: none;
     box-sizing: border-box;
-    padding: 16px 0 0;
-    border-radius: 0 0 5px 5px;
+    padding: 50px 0 0;
     z-index: 50;
     width: 100%;
-    top: 0px;
-    box-shadow: 0 0 20px $accent-color;
+    top:-16px;
 
     .city-suggestion {
       margin: 0;
       padding: 8px 16px;
-      color: black;
-      transition: background-color 0.3s;
+      color: $secondary-color;
+      text-transform: uppercase;
+      letter-spacing: 1.5px;
+      transition: color 0.3s;
 
-      &:last-of-type {
-        border-radius: 0 0 5px 5px;
-      }
       cursor: pointer;
       &:hover {
-        background-color: $secondary-color;
+        color: $link-color;
       }
     }
   }
 }
-.number-of-events__label {
-  font-size: 12px;
-  font-weight: 600;
-  margin-right: 16px;
-}
-.number-of-events__input {
-  padding: 8px 16px;
-  box-sizing: border-box;
-  border-radius: 5px;
-  width: 70px;
-  border: none;
-  font-family: 'Jost', sans-serif;
 
-  &:hover,
-  &:focus {
-    outline: none;
-    background-color: $secondary-color;
+// NUMBER OF EVENTS ==============================
+
+.event-number__container {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  .filter_icon {
+    position: absolute;
+    left: 16px;
   }
-}
 
+  .number-of-events__input {
+    padding: 16px 16px 16px 56px;
+    box-sizing: border-box;
+    background-color: transparent;
+    color: $secondary-color;
+    // width: 70px;
+    border: none;
+    font-family: 'Jost', sans-serif;
+    transition: background-color 0.3s;
+    cursor: pointer;
+  
+    &:hover,
+    &:focus {
+      outline: none;
+      background-color: #181818;
+    }
+  }
+
+}
 
 
 
@@ -164,11 +236,10 @@ body {
 }
 
 .event-item__container {
-  background-color: $accent-color;
-  color: white;
-  padding: 20px;
+  background-color: #222;
+  color: $secondary-color;
+  padding: 20px 24px;
   margin: 5px;
-  border-radius: 5px;
   transition: background-color 0.3s;
   position: relative;
   height: auto;
@@ -182,22 +253,42 @@ body {
         justify-content: space-between;
         align-items: center;
 
+        .date__container {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+
+          .date_icon {
+            margin-right: 16px;
+          }
+        }
+
         h1, p {
           margin: 0;
         }
 
         p {
-          font-weight: 600;
-          font-size: 18px;
-          color: $link-color;
+          font-weight: 400;
+          font-size: 14px;
+          color: $secondary-color;
+          letter-spacing: 1.5px;
         }
      }
 
+     .location__container {
+       display: flex;
+       align-items: center;
+       padding: 8px 0;
+
+       .location_icon {
+         margin-right: 16px;
+       }
+     }
      p {
        margin: 0;
        font-size: 14px;
        text-transform: uppercase;
-       margin-bottom: 10px;
+       letter-spacing: 1.5px;
        color: $secondary-color;
      }
   }
@@ -209,16 +300,19 @@ body {
     }
     a {
       color: $link-color;
+      text-transform: uppercase;
+      letter-spacing: 1.5px;
+      text-decoration: none;
 
       &:visited {
-        color: #6880BF;
+        color: #6F6447;
       }
     }
-    h2 {
-      font-size: 18px;
-    }
+
+    
     p {
-      margin-bottom: 10px;
+      margin-bottom: 24px;
+      line-height: 28px;
     }
   }
 
@@ -226,26 +320,35 @@ body {
   &:focus {
     outline: none;
   }
-
-  .event-item__details-button {
-    padding: 8px 16px;
-    border-radius: 5px;
-    box-sizing: border-box;
+  .more-less__button {
     position: absolute;
-    bottom: 20px;
+    padding-left: 16px;
+    display: flex;
+    align-items: center;
     right: 20px;
-    border: none;
-    cursor: pointer;
-    background-color: white;
-    transition: background-color 0.3s, color 0.3s;
-    font-family: 'Jost';
+    bottom: 24px;
 
-    &:hover,
-    &:focus {
-      background-color: $primary-color;
-      color: white;
-      outline: none;
+    .event-item__details-button {
+      box-sizing: border-box;
+      bottom: 20px;
+      right: 20px;
+      border: none;
+      cursor: pointer;
+      background-color: transparent;
+      color: $secondary-color;
+      font-weight: 700;
+      text-transform: uppercase;
+      transition: color 0.3s;
+      font-family: 'Jost';
+  
+      &:hover,
+      &:focus {
+        color: $secondary-color;
+        outline: none;
+      }
     }
+
   }
+  
 }
 
