--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ body {
 }
 
 .App {
+  box-sizing: border-box;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -233,6 +234,7 @@ body {
   list-style-type: none;
   width: 70%;
   margin-top: 80px;
+  box-sizing: border-box;
 }
 
 .event-item__container {
