Updated media query styling

--- a/src/Media-Queries.scss
+++ b/src/Media-Queries.scss
@@ -27,7 +27,9 @@
         .number-of-events__input {
             padding: 16px 0px 16px 48px;
         }
+    }
 
+    .event-item__container {
         .event-data__collapsed {
             .event-data__flex {
                 h1 {
