--- a/src/App.scss
+++ b/src/App.scss
@@ -26,13 +26,13 @@ body {
 .App {
   box-sizing: border-box;
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-@keyframes shimmer2 {
+@keyframes slide {
   0% {
     transform: translateY(40px)
   }
@@ -41,6 +41,27 @@ body {
   // }
   100% {
     transform: translateY(0px)
+  }
+}
+
+.data-visualization__container {
+  background-color:  #222;
+  padding: 20px 165px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 70px;
+
+  h1 {
+    font-size: 12px;
+    color: $secondary-color;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 400;
+  }
+
+  .charts__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -56,8 +77,8 @@ body {
   bottom: 0;
   padding: 8px 16px;
   font-size: 12px;
-  animation-name: shimmer2;
-  animation-duration: .3s;
+  animation-name: slide;
+  animation-duration: .1s;
   animation-timing-function: ease-out;
 
   img {
@@ -349,7 +370,7 @@ body {
   letter-spacing: 1.5px;
   color: $secondary-color;
   font-weight: 400;
-  margin-top: 100px;
+  margin-top: 24px;
   margin-left: 165px;
   margin-right: auto;
 }
