--- a/src/Media-Queries.scss
+++ b/src/Media-Queries.scss
@@ -4,6 +4,10 @@
         padding: 15px 70px;
     }
 
+    .data-visualization__container {
+        padding: 20px 70px;
+    }
+
     .event-list__title {
         margin-left: 70px;
       }
@@ -18,6 +22,10 @@
     .app__navigation-bar {
         padding: 15px 40px;
 
+    }
+
+    .data-visualization__container {
+        padding: 20px 40px;
     }
     .event-number__container {
         .custom-spinners {
@@ -57,6 +65,11 @@
           }
     }
 
+    .data-visualization__container {
+        padding: 20px 20px;
+        margin-top: 120px;
+    }
+
     .city-search__container {
         width: 80%;
         float: left;
@@ -68,7 +81,7 @@
 
     
     .event-list__title {
-        margin-top: 140px;
+        margin-top: 24px;
         margin-left: 20px;
     }
 
