--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ body {
 .App {
   box-sizing: border-box;
   width: 100vw;
-  height: auto;
+  height: calc(100vh + 500px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@ body {
 }
 
 .data-visualization__container {
-  background-color:  #181818;
+  background-color:  #222;
   padding: 20px 165px 40px;
   width: 100%;
   box-sizing: border-box;
