--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,9 @@ body {
   font-family: 'Jost', sans-serif;
   background-color: $primary-color;
 }
+body::-webkit-scrollbar {
+  width: 0;
+}
 
 
 
